ajout essence + essence xtractor

--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -415,5 +415,39 @@
   "message.beemancer.pollen_pot.empty": "Le pot est vide",
   "message.beemancer.pollen_pot.contents": "Contient %d/%d %s",
   "message.beemancer.pollen_pot.full": "Le pot est plein !",
-  "message.beemancer.pollen_pot.wrong_type": "Ce pot contient déjà un autre type de pollen"
+  "message.beemancer.pollen_pot.wrong_type": "Ce pot contient déjà un autre type de pollen",
+
+  "block.beemancer.extractor_heart": "Cœur d'Extracteur",
+  "message.beemancer.essence_extractor.formed": "L'Extracteur d'Essence a été formé !",
+  "message.beemancer.essence_extractor.already_formed": "L'Extracteur d'Essence est déjà actif",
+  "message.beemancer.essence_extractor.invalid_structure": "Structure invalide - vérifiez le pattern de l'extracteur",
+
+  "item.beemancer.lesser_drop_essence": "Essence de Drop Mineure",
+  "item.beemancer.drop_essence": "Essence de Drop",
+  "item.beemancer.greater_drop_essence": "Essence de Drop Supérieure",
+  "item.beemancer.perfect_drop_essence": "Essence de Drop Parfaite",
+  "item.beemancer.lesser_speed_essence": "Essence de Vitesse Mineure",
+  "item.beemancer.speed_essence": "Essence de Vitesse",
+  "item.beemancer.greater_speed_essence": "Essence de Vitesse Supérieure",
+  "item.beemancer.perfect_speed_essence": "Essence de Vitesse Parfaite",
+  "item.beemancer.lesser_foraging_essence": "Essence de Butinage Mineure",
+  "item.beemancer.foraging_essence": "Essence de Butinage",
+  "item.beemancer.greater_foraging_essence": "Essence de Butinage Supérieure",
+  "item.beemancer.perfect_foraging_essence": "Essence de Butinage Parfaite",
+  "item.beemancer.lesser_tolerance_essence": "Essence de Tolérance Mineure",
+  "item.beemancer.tolerance_essence": "Essence de Tolérance",
+  "item.beemancer.greater_tolerance_essence": "Essence de Tolérance Supérieure",
+  "item.beemancer.perfect_tolerance_essence": "Essence de Tolérance Parfaite",
+  "item.beemancer.diurnal_essence": "Essence Diurne",
+  "item.beemancer.nocturnal_essence": "Essence Nocturne",
+  "item.beemancer.insomnia_essence": "Essence d'Insomnie",
+
+  "item.beemancer.essence.type.drop": "Niveau de Drop",
+  "item.beemancer.essence.type.speed": "Vitesse de Vol",
+  "item.beemancer.essence.type.foraging": "Durée de Butinage",
+  "item.beemancer.essence.type.tolerance": "Tolérance",
+  "item.beemancer.essence.type.diurnal": "Diurne",
+  "item.beemancer.essence.type.nocturnal": "Nocturne",
+  "item.beemancer.essence.type.insomnia": "Insomnie",
+  "item.beemancer.essence.level": "Niveau %d"
 }
