--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -402,6 +402,7 @@
   "block.beemancer.honey_crystal_conduit": "Honey Crystal Conduit",
   "block.beemancer.honey_crystal": "Honey Crystal",
   "block.beemancer.honeyed_slab": "Honeyed Stone Slab",
+  "block.beemancer.honey_reservoir": "Honey Reservoir",
   "block.beemancer.hive_multiblock": "Hive Block",
 
   "message.beemancer.honey_altar.formed": "The Honey Altar has been formed!",
