--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -403,6 +403,7 @@
   "block.beemancer.honey_crystal": "Honey Crystal",
   "block.beemancer.honeyed_slab": "Honeyed Stone Slab",
   "block.beemancer.honey_reservoir": "Honey Reservoir",
+  "block.beemancer.altar_heart": "Altar Heart",
   "block.beemancer.hive_multiblock": "Hive Block",
 
   "message.beemancer.honey_altar.formed": "The Honey Altar has been formed!",
