--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -403,6 +403,7 @@
   "block.beemancer.honey_crystal": "Cristal de Miel",
   "block.beemancer.honeyed_slab": "Dalle en Pierre Miellée",
   "block.beemancer.honey_reservoir": "Réservoir de Miel",
+  "block.beemancer.altar_heart": "Coeur de l'Autel",
   "block.beemancer.hive_multiblock": "Bloc de Ruche",
 
   "message.beemancer.honey_altar.formed": "L'Autel de Miel a été formé !",
