--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -206,6 +206,7 @@
   
   "screen.beemancer.codex": "Beemancer Codex",
   
+  "codex.beemancer.page.bees": "Bee Tree",
   "codex.beemancer.page.bee": "Bees",
   "codex.beemancer.page.alchemy": "Alchemy",
   "codex.beemancer.page.logistics": "Logistics",
