--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -456,5 +456,209 @@
 
   "block.beemancer.bee_statue": "Bee Statue",
   "message.beemancer.bee_statue.species_changed": "Species changed to %s (%d/%d)",
-  "message.beemancer.bee_statue.bee_given": "You received a %s!"
+  "message.beemancer.bee_statue.bee_given": "You received a %s!",
+
+  "codex.beemancer.bees.meadow_bee.title": "Meadow Bee",
+  "codex.beemancer.bees.meadow_bee.desc": "A peaceful bee found in flower-filled meadows, producing sweet honeycomb.",
+  "codex.beemancer.bees.forest_bee.title": "Forest Bee",
+  "codex.beemancer.bees.forest_bee.desc": "Thrives among the trees, gathering pollen from woodland flowers.",
+  "codex.beemancer.bees.rocky_bee.title": "Rocky Bee",
+  "codex.beemancer.bees.rocky_bee.desc": "A hardy bee that feeds on crystals, leaving behind cobblestone in its wake.",
+  "codex.beemancer.bees.river_bee.title": "River Bee",
+  "codex.beemancer.bees.river_bee.desc": "Lives near flowing water, its honey has a refreshing quality.",
+  "codex.beemancer.bees.dune_bee.title": "Dune Bee",
+  "codex.beemancer.bees.dune_bee.desc": "An aggressive desert dweller that collects sand grains in its combs.",
+  "codex.beemancer.bees.nether_bee.title": "Nether Bee",
+  "codex.beemancer.bees.nether_bee.desc": "Born in hellfire, this aggressive bee has adapted to extreme heat.",
+  "codex.beemancer.bees.end_bee.title": "End Bee",
+  "codex.beemancer.bees.end_bee.desc": "A mysterious bee from the void, touched by ender energy.",
+
+  "codex.beemancer.bees.monsty_bee.title": "Monsty Bee",
+  "codex.beemancer.bees.monsty_bee.desc": "A mischievous bee with a taste for monsters.",
+  "codex.beemancer.bees.docile_bee.title": "Docile Bee",
+  "codex.beemancer.bees.docile_bee.desc": "The gentlest of bees, never harms a living soul.",
+  "codex.beemancer.bees.loam_bee.title": "Loam Bee",
+  "codex.beemancer.bees.loam_bee.desc": "Burrows in rich soil, producing dirt-infused combs.",
+  "codex.beemancer.bees.sediment_bee.title": "Sediment Bee",
+  "codex.beemancer.bees.sediment_bee.desc": "Sifts through riverbeds, collecting gravel particles.",
+  "codex.beemancer.bees.spark_bee.title": "Spark Bee",
+  "codex.beemancer.bees.spark_bee.desc": "Creates tiny sparks as it flies, leaving flint in its comb.",
+  "codex.beemancer.bees.cultural_bee.title": "Cultural Bee",
+  "codex.beemancer.bees.cultural_bee.desc": "A civilized bee that learned from watching farmers.",
+
+  "codex.beemancer.bees.carbon_bee.title": "Carbon Bee",
+  "codex.beemancer.bees.carbon_bee.desc": "Nocturnal bee that gathers coal fragments in darkness.",
+  "codex.beemancer.bees.cupric_bee.title": "Cupric Bee",
+  "codex.beemancer.bees.cupric_bee.desc": "Attracted to oxidized metals, produces raw copper shards.",
+  "codex.beemancer.bees.festering_bee.title": "Festering Bee",
+  "codex.beemancer.bees.festering_bee.desc": "Feeds on decay, leaving rotten flesh in its comb.",
+  "codex.beemancer.bees.skeletal_bee.title": "Skeletal Bee",
+  "codex.beemancer.bees.skeletal_bee.desc": "A ghastly bee that collects bones from fallen creatures.",
+  "codex.beemancer.bees.silken_bee.title": "Silken Bee",
+  "codex.beemancer.bees.silken_bee.desc": "Spins silk-like threads into its honeycomb.",
+  "codex.beemancer.bees.arachnid_bee.title": "Arachnid Bee",
+  "codex.beemancer.bees.arachnid_bee.desc": "Eight-legged hybrid that produces spider eyes.",
+  "codex.beemancer.bees.tanner_bee.title": "Tanner Bee",
+  "codex.beemancer.bees.tanner_bee.desc": "Its enzymes can process hide into leather fragments.",
+  "codex.beemancer.bees.plume_bee.title": "Plume Bee",
+  "codex.beemancer.bees.plume_bee.desc": "A swift and light bee that sheds feathers as it flies.",
+  "codex.beemancer.bees.quercus_bee.title": "Quercus Bee",
+  "codex.beemancer.bees.quercus_bee.desc": "Nests in mighty oaks, producing oak log fragments.",
+  "codex.beemancer.bees.boreal_bee.title": "Boreal Bee",
+  "codex.beemancer.bees.boreal_bee.desc": "Thrives in cold forests, collecting spruce essence.",
+  "codex.beemancer.bees.tropical_bee.title": "Tropical Bee",
+  "codex.beemancer.bees.tropical_bee.desc": "Dwells in humid jungles, gathering jungle wood.",
+  "codex.beemancer.bees.paperbark_bee.title": "Paperbark Bee",
+  "codex.beemancer.bees.paperbark_bee.desc": "Loves birch trees, creating pale wood fragments.",
+  "codex.beemancer.bees.reed_bee.title": "Reed Bee",
+  "codex.beemancer.bees.reed_bee.desc": "Lives among sugar cane, sweetening its honey further.",
+  "codex.beemancer.bees.karot_bee.title": "Karot Bee",
+  "codex.beemancer.bees.karot_bee.desc": "Orange-tinted bee that cultivates carrots.",
+  "codex.beemancer.bees.tuber_bee.title": "Tuber Bee",
+  "codex.beemancer.bees.tuber_bee.desc": "Burrows underground to tend potato crops.",
+  "codex.beemancer.bees.juicy_bee.title": "Juicy Bee",
+  "codex.beemancer.bees.juicy_bee.desc": "Produces refreshing melon slices in its comb.",
+  "codex.beemancer.bees.gourd_bee.title": "Gourd Bee",
+  "codex.beemancer.bees.gourd_bee.desc": "A festive bee that grows miniature pumpkins.",
+  "codex.beemancer.bees.agrarian_bee.title": "Agrarian Bee",
+  "codex.beemancer.bees.agrarian_bee.desc": "The farmer's friend, cultivating wheat with care.",
+
+  "codex.beemancer.bees.prince_bee.title": "Prince Bee",
+  "codex.beemancer.bees.prince_bee.desc": "A noble bee of royal lineage, spawned naturally.",
+  "codex.beemancer.bees.flower_bee.title": "Flower Bee",
+  "codex.beemancer.bees.flower_bee.desc": "Pollinates all flowers, carrying precious flower pollen.",
+  "codex.beemancer.bees.mushroom_bee.title": "Mushroom Bee",
+  "codex.beemancer.bees.mushroom_bee.desc": "Thrives in darkness, spreading mushroom spores.",
+  "codex.beemancer.bees.tree_bee.title": "Tree Bee",
+  "codex.beemancer.bees.tree_bee.desc": "Master of all forests, collecting tree pollen.",
+  "codex.beemancer.bees.crystal_bee.title": "Crystal Bee",
+  "codex.beemancer.bees.crystal_bee.desc": "Crystallizes honey into magical crystal pollen.",
+  "codex.beemancer.bees.argil_bee.title": "Argil Bee",
+  "codex.beemancer.bees.argil_bee.desc": "Shapes clay balls with remarkable precision.",
+  "codex.beemancer.bees.umbra_bee.title": "Umbra Bee",
+  "codex.beemancer.bees.umbra_bee.desc": "Dwells in shadowy groves of dark oak.",
+  "codex.beemancer.bees.savanna_bee.title": "Savanna Bee",
+  "codex.beemancer.bees.savanna_bee.desc": "Roams dry grasslands, collecting acacia wood.",
+  "codex.beemancer.bees.frost_bee.title": "Frost Bee",
+  "codex.beemancer.bees.frost_bee.desc": "A cold-loving bee that freezes water into ice fragments.",
+  "codex.beemancer.bees.volatile_bee.title": "Volatile Bee",
+  "codex.beemancer.bees.volatile_bee.desc": "Handle with care! Produces gunpowder fragments.",
+  "codex.beemancer.bees.ashen_bee.title": "Ashen Bee",
+  "codex.beemancer.bees.ashen_bee.desc": "Born from volcanic ash, leaving andesite in its wake.",
+  "codex.beemancer.bees.igneous_bee.title": "Igneous Bee",
+  "codex.beemancer.bees.igneous_bee.desc": "Forged in magma chambers, producing diorite.",
+  "codex.beemancer.bees.rose_stone_bee.title": "Rose Stone Bee",
+  "codex.beemancer.bees.rose_stone_bee.desc": "Attracted to pink minerals, creating granite.",
+
+  "codex.beemancer.bees.infernalist_bee.title": "Infernalist Bee",
+  "codex.beemancer.bees.infernalist_bee.desc": "A demonic bee spawned in the depths of the Nether.",
+  "codex.beemancer.bees.swift_bee.title": "Swift Bee",
+  "codex.beemancer.bees.swift_bee.desc": "Incredibly fast, a blur of golden wings.",
+  "codex.beemancer.bees.royal_bee.title": "Royal Bee",
+  "codex.beemancer.bees.royal_bee.desc": "Produces the coveted Royal Comb, fit for a queen.",
+  "codex.beemancer.bees.ferrous_bee.title": "Ferrous Bee",
+  "codex.beemancer.bees.ferrous_bee.desc": "Magnetized to iron, producing raw iron shards.",
+  "codex.beemancer.bees.flux_bee.title": "Flux Bee",
+  "codex.beemancer.bees.flux_bee.desc": "Channels energy through its body, dropping redstone dust.",
+  "codex.beemancer.bees.lazuli_bee.title": "Lazuli Bee",
+  "codex.beemancer.bees.lazuli_bee.desc": "Deep blue in color, producing lapis lazuli fragments.",
+  "codex.beemancer.bees.quartzose_bee.title": "Quartzose Bee",
+  "codex.beemancer.bees.quartzose_bee.desc": "Thrives in Nether heat, creating quartz fragments.",
+  "codex.beemancer.bees.luminous_bee.title": "Luminous Bee",
+  "codex.beemancer.bees.luminous_bee.desc": "Glows brightly in darkness, shedding glowstone dust.",
+  "codex.beemancer.bees.grim_bee.title": "Grim Bee",
+  "codex.beemancer.bees.grim_bee.desc": "A dark bee from the basalt deltas, producing blackstone.",
+  "codex.beemancer.bees.columnar_bee.title": "Columnar Bee",
+  "codex.beemancer.bees.columnar_bee.desc": "Builds towering structures from basalt columns.",
+  "codex.beemancer.bees.viscous_bee.title": "Viscous Bee",
+  "codex.beemancer.bees.viscous_bee.desc": "Produces sticky slime ball shards.",
+  "codex.beemancer.bees.inky_bee.title": "Inky Bee",
+  "codex.beemancer.bees.inky_bee.desc": "Leaves trails of ink wherever it goes.",
+  "codex.beemancer.bees.fleece_bee.title": "Fleece Bee",
+  "codex.beemancer.bees.fleece_bee.desc": "Soft and fluffy, producing wool from pollen.",
+  "codex.beemancer.bees.adobe_bee.title": "Adobe Bee",
+  "codex.beemancer.bees.adobe_bee.desc": "Bakes clay under the desert sun into terracotta.",
+  "codex.beemancer.bees.geode_bee.title": "Geode Bee",
+  "codex.beemancer.bees.geode_bee.desc": "Grows beautiful amethyst shards in its hive.",
+  "codex.beemancer.bees.marsh_bee.title": "Marsh Bee",
+  "codex.beemancer.bees.marsh_bee.desc": "Navigates murky swamps, gathering mangrove wood.",
+
+  "codex.beemancer.bees.majestic_bee.title": "Majestic Bee",
+  "codex.beemancer.bees.majestic_bee.desc": "The pride of any apiary, radiating regal beauty.",
+  "codex.beemancer.bees.steady_bee.title": "Steady Bee",
+  "codex.beemancer.bees.steady_bee.desc": "Unwavering and reliable, immune to most threats.",
+  "codex.beemancer.bees.wind_bee.title": "Wind Bee",
+  "codex.beemancer.bees.wind_bee.desc": "Commands the winds, carrying Pollen of Wind.",
+  "codex.beemancer.bees.thunder_bee.title": "Thunder Bee",
+  "codex.beemancer.bees.thunder_bee.desc": "Crackles with electricity, bearing Pollen of Thunder.",
+  "codex.beemancer.bees.water_bee.title": "Water Bee",
+  "codex.beemancer.bees.water_bee.desc": "Master of aquatic realms, carrying Pollen of Water.",
+  "codex.beemancer.bees.fire_bee.title": "Fire Bee",
+  "codex.beemancer.bees.fire_bee.desc": "Burns with inner flame, bearing Pollen of Fire.",
+  "codex.beemancer.bees.auric_bee.title": "Auric Bee",
+  "codex.beemancer.bees.auric_bee.desc": "Golden-winged treasure hunter, producing raw gold fragments.",
+  "codex.beemancer.bees.magmatic_bee.title": "Magmatic Bee",
+  "codex.beemancer.bees.magmatic_bee.desc": "Swims through lava, creating magma cream shards.",
+  "codex.beemancer.bees.spirit_bee.title": "Spirit Bee",
+  "codex.beemancer.bees.spirit_bee.desc": "A ghostly bee that haunts soul sand valleys.",
+  "codex.beemancer.bees.crimson_bee.title": "Crimson Bee",
+  "codex.beemancer.bees.crimson_bee.desc": "Cultivates nether wart in crimson forests.",
+  "codex.beemancer.bees.mycelial_bee.title": "Mycelial Bee",
+  "codex.beemancer.bees.mycelial_bee.desc": "Spreads fungal mycelium wherever it lands.",
+  "codex.beemancer.bees.humus_bee.title": "Humus Bee",
+  "codex.beemancer.bees.humus_bee.desc": "Enriches soil into podzol with its activities.",
+  "codex.beemancer.bees.floral_bee.title": "Floral Bee",
+  "codex.beemancer.bees.floral_bee.desc": "A royal gardener that spreads flowers everywhere.",
+
+  "codex.beemancer.bees.treasure_bee.title": "Treasure Bee",
+  "codex.beemancer.bees.treasure_bee.desc": "Legendary hoarder of precious materials.",
+  "codex.beemancer.bees.siphoning_bee.title": "Siphoning Bee",
+  "codex.beemancer.bees.siphoning_bee.desc": "Drains energy from the End dimension.",
+  "codex.beemancer.bees.zephyr_bee.title": "Zephyr Bee",
+  "codex.beemancer.bees.zephyr_bee.desc": "The fastest bee ever recorded, a mere blur.",
+  "codex.beemancer.bees.prismatic_bee.title": "Prismatic Bee",
+  "codex.beemancer.bees.prismatic_bee.desc": "Refracts light into prismarine shards.",
+  "codex.beemancer.bees.crystalline_bee.title": "Crystalline Bee",
+  "codex.beemancer.bees.crystalline_bee.desc": "Creates prismarine crystals of perfect clarity.",
+  "codex.beemancer.bees.insomnia_bee.title": "Insomnia Bee",
+  "codex.beemancer.bees.insomnia_bee.desc": "Never sleeps, dropping phantom membranes.",
+  "codex.beemancer.bees.blazing_bee.title": "Blazing Bee",
+  "codex.beemancer.bees.blazing_bee.desc": "Burns with infernal fury, producing blaze rod fragments.",
+
+  "codex.beemancer.bees.diamantine_bee.title": "Diamantine Bee",
+  "codex.beemancer.bees.diamantine_bee.desc": "The ultimate gem collector, producing diamond dust.",
+  "codex.beemancer.bees.venerable_bee.title": "Venerable Bee",
+  "codex.beemancer.bees.venerable_bee.desc": "Ancient and wise, creating precious emerald dust.",
+  "codex.beemancer.bees.volcanic_bee.title": "Volcanic Bee",
+  "codex.beemancer.bees.volcanic_bee.desc": "Born in eruptions, producing obsidian dust.",
+  "codex.beemancer.bees.xenolith_bee.title": "Xenolith Bee",
+  "codex.beemancer.bees.xenolith_bee.desc": "Stranger from beyond, leaving end stone behind.",
+  "codex.beemancer.bees.traveler_bee.title": "Traveler Bee",
+  "codex.beemancer.bees.traveler_bee.desc": "Teleports short distances, shedding ender pearl dust.",
+  "codex.beemancer.bees.sorrow_bee.title": "Sorrow Bee",
+  "codex.beemancer.bees.sorrow_bee.desc": "Cries tears that crystallize into ghast tear shards.",
+  "codex.beemancer.bees.absorbent_bee.title": "Absorbent Bee",
+  "codex.beemancer.bees.absorbent_bee.desc": "Soaks up water, creating sponge material.",
+  "codex.beemancer.bees.light_bee.title": "Light Bee",
+  "codex.beemancer.bees.light_bee.desc": "Radiates pure light, carrying Pollen of Light.",
+  "codex.beemancer.bees.dark_bee.title": "Dark Bee",
+  "codex.beemancer.bees.dark_bee.desc": "Absorbs all light, bearing Pollen of Darkness.",
+  "codex.beemancer.bees.imperial_bee.title": "Imperial Bee",
+  "codex.beemancer.bees.imperial_bee.desc": "Rules over all other bees with absolute authority.",
+
+  "codex.beemancer.bees.demonic_bee.title": "Demonic Bee",
+  "codex.beemancer.bees.demonic_bee.desc": "A terrifying bee corrupted by dark forces.",
+  "codex.beemancer.bees.paladin_bee.title": "Paladin Bee",
+  "codex.beemancer.bees.paladin_bee.desc": "A holy warrior bee that smites hostile creatures.",
+  "codex.beemancer.bees.chorus_bee.title": "Chorus Bee",
+  "codex.beemancer.bees.chorus_bee.desc": "Teleports erratically, cultivating chorus fruit.",
+  "codex.beemancer.bees.ancient_bee.title": "Ancient Bee",
+  "codex.beemancer.bees.ancient_bee.desc": "Primordial bee that produces netherite scrap dust.",
+  "codex.beemancer.bees.void_bee.title": "Void Bee",
+  "codex.beemancer.bees.void_bee.desc": "Exists between light and dark, carrying Void Pollen.",
+
+  "codex.beemancer.bees.draconic_bee.title": "Draconic Bee",
+  "codex.beemancer.bees.draconic_bee.desc": "Infused with dragon essence, producing dragon breath dust.",
+  "codex.beemancer.bees.stellar_bee.title": "Stellar Bee",
+  "codex.beemancer.bees.stellar_bee.desc": "Born from a dying star, shedding nether star dust."
 }
